src/aks/user-java.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripinsights-user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripinsights-user-java
  template:
    metadata:
      labels:
        app: tripinsights-user-java
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      serviceAccountName: "workload-identity-sa"
      containers:
      - name: tripinsights-user-java
        image: registrynbu1374.azurecr.io/tripinsights/user-java:1.0
        volumeMounts:
        - name: secrets-volume
          mountPath: "/secrets"
          readOnly: true     
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
      volumes:
      - name: secrets-volume
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kvname-system-msi"               
---
apiVersion: v1
kind: Service
metadata:
  name: tripinsights-user-java
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: tripinsights-user-java
