src/aks/ingress.mon.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /monitor/*
        pathType: Prefix
        backend:
          service:
            name: grafana-1686647737
            port:
              number: 3000
