src/aks/ingress.web.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: api-dev.challenge4.com  # Replace with your domain or IP address
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tripinsights-tripviewer
            port:
              number: 80
