src/aks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: tripinsights-poi
            port:
              number: 80
      - path: /swagger/docs/poi
        pathType: Prefix
        backend:
          service:
            name: tripinsights-poi
            port:
              number: 80                
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: tripinsights-poi
            port:
              number: 80              
      - path: /api/trips
        pathType: Prefix
        backend:
          service:
            name: tripinsights-trips
            port:
              number: 80
      - path: /api/user-java
        pathType: Prefix
        backend:
          service:
            name: tripinsights-user-java
            port:
              number: 80
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: tripinsights-userprofile
            port:
              number: 80
